name:                aws-cloudfront
version:             0.0.1
synopsis:            Bindings for AWS CloudFront
license:             MIT
license-file:        LICENSE
author:              Michael Xavier <michael.xavier@soostone.com>
maintainer:          Michael Xavier <michael.xavier@soostone.com>
copyright:           (c) 2015 SooStone Inc.
category:            Network, Web, AWS, Cloud
build-type:          Simple
extra-doc-files:     README.md,
                     CHANGELOG.md
cabal-version:       >=1.10

Flag Development
  Description: Build in local development mode with fatal warnings.
  Default: False


library
  exposed-modules:    Aws.CloudFront
                    , Aws.CloudFront.Core
                    , Aws.CloudFront.Commands.CreateInvalidationRequest
                    , Aws.CloudFront.Commands.GetDistributionList
  other-modules:      Aws.CloudFront.Util
  build-depends:       base >= 4.6 && < 4.7
                     , aws  >= 0.10  && < 0.12
                     , aws-general
                     , http-types
                     , semigroups
                     , xml-conduit >= 1.2 && < 1.3
                     , http-conduit >= 2.0 && < 2.2
                     , text >= 0.11
                     , bytestring >= 0.10
                     , blaze-builder
                     , transformers >= 0.3 && < 0.5
                     , parsers
                     , resourcet
                     , exceptions
                     , errors
                     , time
                     , old-locale
                     , conduit
                     , containers


  hs-source-dirs:      src
  default-language:    Haskell2010

  if flag(Development)
    ghc-options: -Wall -Werror


test-suite test
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  main-is: Main.hs
  ghc-options: -Wall -Werror -threaded -rtsopts -O0
  hs-source-dirs:
    test/src

  Build-depends:   tasty
                 , tasty-hunit
                 , tasty-quickcheck
                 , aws-cloudfront
                 , base
                 , semigroups
                 , xml-conduit
                 , time
                 , system-filepath
                 , data-default
                 , errors
                 , text
                 , aws-general
