name:                aws-cloudfront
version:             0.0.1
synopsis:            Bindings for AWS CloudFront
license:             BSD3
license-file:        LICENSE
author:              Michael Xavier <michael.xavier@soostone.com>
maintainer:          Michael Xavier <michael.xavier@soostone.com>
copyright:           (c) 2015 SooStone Inc.
category:            Network, Web, AWS, Cloud
build-type:          Simple
extra-doc-files:     README.md,
                     CHANGELOG.md
cabal-version:       >=1.10

Flag Development
  Description: Build in local development mode with fatal warnings.
  Default: False


library
  exposed-modules:    Aws.CloudFront
                    , Aws.CloudFront.Core
                    , Aws.CloudFront.Types
                    , Aws.CloudFront.Commands.CreateInvalidationRequest
                    , Aws.CloudFront.Commands.GetDistribution
                    , Aws.CloudFront.Commands.GetDistributionList
                    , Aws.CloudFront.Commands.GetInvalidationList
                    , Aws.CloudFront.Commands.GetInvalidationRequest
                    , Aws.CloudFront.Util
  build-depends:       base >= 4.6 && < 5
                     , aws  >= 0.10
                     , aws-general >= 0.2
                     , http-types
                     , semigroups
                     , xml-conduit >= 1.2
                     , http-conduit >= 2.0 && < 2.3
                     , text >= 0.11
                     , bytestring >= 0.10
                     , blaze-builder
                     , transformers >= 0.3 && < 0.6
                     , parsers
                     , resourcet
                     , exceptions
                     , errors >= 2.0 && < 2.3
                     , time
                     , time-locale-compat
                     , old-locale
                     , conduit
                     , containers
                     , data-default >= 0.5.3



  hs-source-dirs:      src
  default-language:    Haskell2010

  if flag(Development)
    ghc-options: -Wall -Werror


test-suite test
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  main-is: Main.hs
  ghc-options: -Wall -Werror -threaded -rtsopts -O0
  hs-source-dirs:
    test/src

  Build-depends:   tasty
                 , tasty-hunit
                 , tasty-quickcheck
                 , aws-cloudfront
                 , base
                 , semigroups
                 , xml-conduit
                 , time
                 , system-filepath
                 , data-default
                 , errors
                 , text
                 , aws-general
                 , quickcheck-instances
                 , derive
